YAML configuration file and RabbitMQ API added (with example)

--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,14 @@
       <artifactId>storm-core</artifactId>
       <version>1.0.3</version>
         <!--> compile for LOCAL MODE, provided for real CLUSTER mode </!-->
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>4.1.0</version>
+    </dependency>
 
   </dependencies>
 </project>
