--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 </descriptorRefs>
                 <archive>
                   <manifest>
-                    <mainClass>org.uniroma2.sdcc.AnomaliesDetectionTopology</mainClass>
+                    <mainClass>org.uniroma2.sdcc.RankingOldestLampsTopology</mainClass>
                   </manifest>
                 </archive>
               </configuration>
@@ -84,6 +84,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>net.spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.12.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.whalin</groupId>
+            <artifactId>Memcached-Java-Client</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
@@ -95,7 +107,7 @@
             <artifactId>storm-core</artifactId>
             <version>1.0.3</version>
             <!--> compile for LOCAL MODE, provided for real CLUSTER mode </!-->
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -114,6 +126,11 @@
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
 
     </dependencies>
