--- a/pom.xml
+++ b/pom.xml
@@ -161,5 +161,12 @@
             <version>2.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.12.2</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
