--- a/config/config.yml
+++ b/config/config.yml
@@ -25,8 +25,8 @@ queue_out:
 
 rankingTopologyParams:
   rank_size: 10
+  lifetime_minimum: 7
 
 controlThresholds:
   traffic_tolerance: 20
   parking_tolerance: 20
-  lifetime_threshold: 7
