--- a/config/config.yml
+++ b/config/config.yml
@@ -17,6 +17,10 @@ statisticsTopologyParams:
     windowLength: 86400
     emitFrequency: 3600
 
+queue_in:
+  queue_name: 'storm'
+  hostname: 'localhost'
+  port: 5672
 
 queue_out:
   queue_name: 'my-cookye'
