--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>org.uniroma2.sdcc.AnomaliesDetectionTopology</mainClass>
+                            <mainClass>org.uniroma2.sdcc.Topologies</mainClass>
                             <classpathPrefix>lib/</classpathPrefix>
                         </manifest>
                     </archive>
@@ -51,7 +51,7 @@
                 </descriptorRefs>
                 <archive>
                   <manifest>
-                    <mainClass>org.uniroma2.sdcc.AnomaliesDetectionTopology</mainClass>
+                    <mainClass>org.uniroma2.sdcc.Topologies</mainClass>
                   </manifest>
                 </archive>
               </configuration>
@@ -83,13 +83,6 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>net.spy</groupId>
-            <artifactId>spymemcached</artifactId>
-            <version>2.12.2</version>
-            <scope>provided</scope>
-        </dependency>
-
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-opensdk</artifactId>
