RabbitMQ Pub/Sub Manager. Modified final bolts and initial spout with rabbit managers

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,7 +23,7 @@ queue_in:
   port: 5672
 
 queue_out:
-  queue_name: 'my-cookye'
+  queue_name: 'dashboard_exchange'
   hostname: 'localhost'
   port: 5673
 
