--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,7 +18,7 @@ statisticsTopologyParams:
     emitFrequency: 3600
 
 memcached:
-  hostname: 'localhost'
+  hostname: 'memc'
   port: 11211
 
 parkingServer:
@@ -27,12 +27,12 @@ parkingServer:
 
 queue_in:
   queue_name: 'storm'
-  hostname: 'localhost'
+  hostname: 'rabbit'
   port: 5672
 
 queue_out:
   queue_name: 'dashboard_exchange'
-  hostname: 'localhost'
+  hostname: 'rabbit_dashboard'
   port: 5673
 
 rankingTopologyParams:
